content/boomerang-flow/3.4.0/installing/01.installing.md
---
title: Installing
index: 1
---

# Installing

Boomerang Flow is packaged as a Helm<sup>®</sup> 3 chart with the values documented in the chart. Please make sure to read the [prerequisites](/docs/boomerang-flow/installing/pre-requisites) prior to installing.

## Installation steps

To get started quickly, install into a Kubernetes<sup>®</sup> cluster of 1.13+ via Helm, using the following commands:

**Step 1**

Install a mmongodb instance for our Boomerang Flow will store the data.
```sh
helm repo add bitnami https://charts.bitnami.com/bitnami
helm repo update

helm upgrade --version 7.8.8 --install bmrg-mongodb bitnami/mongodb --set mongodbDatabase=boomerang --set mongodbUsername=boomerang
```

**Step 2**

Install or upgrade the Helm chart using the relevant Helm commands and passing in any properties.

We've bundled in our Helm chart all the necessary dependencies required to install Boomerang Flow, like Tekton and auth2-proxy frameworks. We left them enabled for an easier installation experience however they would need to get configured for your specific use-case.

> **Note:** To disable the tekton and oauth2-proxy use the `--set tekton.enabled=false` and `--set auth2proxy.enabled=false`.

Explicit examples of the configuration files can be found [here](https://github.com/boomerang-io/charts/tree/main/examples).

```sh
helm repo add boomerang-io https://raw.githubusercontent.com/boomerang-io/charts/index
helm repo update

helm upgrade --install --debug flow boomerang-io/bmrg-flow -f <configuration.yaml>
```

> **Note:** If `workers.security.enable` is set to `true`, `workers.security.policy` should be set to a **privileged** PodSecurityPolicy (Kubernetes based platforms) / SecurityContextConstraint (OpenShift based platforms).


## Post installation

### First Time Activation wizard

When installing Boomerang Flow in standalone mode, you will be presented with a token in the output of the Helm command, with some instructions on how to navigate to the installed running application.

Upon navigating to the links provided, a First Time Activation wizard appears, and redirection will occur, until the one-time activation token is provided.

This is an important step to ensure that an Administrator account is dynamically created, providing the user the correct entitlements to perform the post installation configuration steps.

![Activation wizard screen](./assets/activation-screen.png)

### Post installation configuration

After installation and activation, you will be able to administer the settings. These are dynamic configurations that can be changed during runtime. This ensures don't have to provide this via the values YAML at installation time, as there is nothing worse than having to put together a values YAML with greater than 100 values!

Currently, these settings will affect how the workers interface and execute. See [Workers and Execute](/docs/boomerang-flow/architecture/worker-and-executor-architecture) for details.

## Installation steps on your local machine

The Helm<sup>®</sup> 3 chart that we put in place for Boomerang Flow, allows you to install it, together with its dependencies on your laptop. The only pre-requirement is to have Docker installed before starting the installation process.

You can follow this step-by-step article on how to install Boomerang Flow locally on a “regular” laptop which covers:
 - installing a Kubernetes cluster on the local machine using Kind,
 - installing a mongodb instance to store our data,
 - installing Boomerang Flow and its dependencies,
 - finally activating it and doing a demo workflow.

[Put Boomerang Flow onto your laptop](https://itnext.io/lets-put-boomerang-flow-on-our-laptop-8a63eac2b9e5)

## Issues Installing

If you encounter issues installing Boomerang Flow you can reach out on our Slack channels. The following are some of the known issues faced.

### No Pipelines ServiceAccount

If you are attempting to run Workflows and they are coming up with an error including `serviceaccounts "pipeline" not found` then its most likely that the pipelines service account needed by Tekton is not found. This can be solved by creating the required serviceaccount and rolebinding. Typically we link to a priviledged clusterrole.

```sh
kubectl create serviceaccount pipeline
kubectl create rolebinding pipeline-rolebinding --serviceaccounts <namespace>:pipeline --clusterrole=<clusterrole>
```

![ServiceAccount Error](./assets/installing-issues-serviceaccount.png)
